fix: Top-align search icons on hovered `.SiteSearchAutocomplete__item`s

--- a/modules/hanna-css/src/css/SiteSearchAutocomplete.scss
+++ b/modules/hanna-css/src/css/SiteSearchAutocomplete.scss
@@ -35,7 +35,7 @@
   .SiteSearchAutocomplete__item {
     font: $var--font-bd-l;
     padding: $var--space-2 $var--space-4;
-    padding-right: $var--space-6;
+    padding-right: $var--space-7;
 
     @media #{$mq-phone_phablet} {
       padding-left: $var--space-2;
